[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Entities/Machine.tres" type="SpriteFrames" id=1]
[ext_resource path="res://entities/ItemObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SneedMachine.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.75, 16 )

[node name="TestMachine" type="AnimatedSprite"]
frames = ExtResource( 1 )
script = ExtResource( 3 )

[node name="DetectItem" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -8.06194, 7.41612 )
scale = Vector2( 0.1, 0.1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 15.4338, 15.1532 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 15.75, 16.75 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
